# CanvasCV

./: .gitignore  CMakeLists.txt  CanvasCV.pro  Doxyfile.in  LICENSE  README.md  _config.yml  about.md  arrow.cpp  arrow.h  button.cpp  button.h  buttonarray.cpp  buttonarray.h  canvas.cpp  canvas.h  colors.cpp  colors.h  compoundshape.cpp  compoundshape.h  compoundwidget.cpp  compoundwidget.h  contact.md  donate.md  doxygen_main.md  ellipse.cpp  ellipse.h  floatingtext.cpp  floatingtext.h  handle.cpp  handle.h  horizontallayout.cpp  horizontallayout.h  labeledshapesconnector.cpp  labeledshapesconnector.h  layout.h  layoutbase.cpp  layoutbase.h  layoutbasewidget.cpp  layoutbasewidget.h  (+30 more)
_docUpdate/: .gitignore  CMakeLists.txt  doxygen_main.md  doxygen_style.css  doxygen_style.css.bk  update_doxygen.sh
_includes/: header.html  share-buttons.html
_layouts/: home.html  home.html.bk  page.html  post.html
_posts/: 2017-07-1-launch.md  2017-07-6-launch.md  2017-07-7-news.md
_siteMapGen/: google-sitemapgen.xml  update_sitemap.sh
assets/: main.scss
doc/html/: annotated.html  arrow_8h_source.html  autolayout_8h_source.html  button_8h_source.html  canvas_8h_source.html  checkboxes_8h_source.html  classcanvascv_1_1Arrow-members.html  classcanvascv_1_1Arrow.html  classcanvascv_1_1AutoLayout-members.html  classcanvascv_1_1AutoLayout.html  classcanvascv_1_1Button-members.html  classcanvascv_1_1Button.html  classcanvascv_1_1Canvas-members.html  classcanvascv_1_1Canvas.html  classcanvascv_1_1CheckBoxes-members.html  classcanvascv_1_1CheckBoxes.html  classcanvascv_1_1Colors-members.html  classcanvascv_1_1Colors.html  classcanvascv_1_1CompoundShape-members.html  classcanvascv_1_1CompoundShape.html  classcanvascv_1_1CompoundWidget-members.html  classcanvascv_1_1CompoundWidget.html  classcanvascv_1_1Consts-members.html  classcanvascv_1_1Consts.html  classcanvascv_1_1Ellipse-members.html  classcanvascv_1_1Ellipse.html  classcanvascv_1_1HFrame-members.html  classcanvascv_1_1HFrame.html  classcanvascv_1_1Handle-members.html  classcanvascv_1_1Handle.html  classcanvascv_1_1HorizontalLayout-members.html  classcanvascv_1_1HorizontalLayout.html  classcanvascv_1_1LabeledShapesConnector-members.html  classcanvascv_1_1LabeledShapesConnector.html  classcanvascv_1_1Layout-members.html  classcanvascv_1_1Layout.html  classcanvascv_1_1LayoutBase-members.html  classcanvascv_1_1LayoutBase.html  classcanvascv_1_1Line-members.html  classcanvascv_1_1Line.html  (+165 more)
doc/latex/: annotated.tex  classcanvascv_1_1Arrow.eps  classcanvascv_1_1Arrow.tex  classcanvascv_1_1AutoLayout.eps  classcanvascv_1_1AutoLayout.tex  classcanvascv_1_1Button.eps  classcanvascv_1_1Button.tex  classcanvascv_1_1Canvas.eps  classcanvascv_1_1Canvas.tex  classcanvascv_1_1CheckBoxes.eps  classcanvascv_1_1CheckBoxes.tex  classcanvascv_1_1Colors.tex  classcanvascv_1_1CompoundShape.eps  classcanvascv_1_1CompoundShape.tex  classcanvascv_1_1CompoundWidget.eps  classcanvascv_1_1CompoundWidget.tex  classcanvascv_1_1Consts.tex  classcanvascv_1_1Ellipse.eps  classcanvascv_1_1Ellipse.tex  classcanvascv_1_1HFrame.eps  classcanvascv_1_1HFrame.tex  classcanvascv_1_1Handle.eps  classcanvascv_1_1Handle.tex  classcanvascv_1_1HorizontalLayout.eps  classcanvascv_1_1HorizontalLayout.tex  classcanvascv_1_1LabeledShapesConnector.eps  classcanvascv_1_1LabeledShapesConnector.tex  classcanvascv_1_1Layout.eps  classcanvascv_1_1Layout.tex  classcanvascv_1_1LayoutBase.eps  classcanvascv_1_1LayoutBase.tex  classcanvascv_1_1Line.eps  classcanvascv_1_1Line.tex  classcanvascv_1_1LineCrossing.eps  classcanvascv_1_1LineCrossing.tex  classcanvascv_1_1MatWidget.eps  classcanvascv_1_1MatWidget.tex  classcanvascv_1_1MsgBox.eps  classcanvascv_1_1MsgBox.tex  classcanvascv_1_1Polygon.eps  (+66 more)
docs/: about.md  demo.md  roadmap.md  start.md
docs/assets/: main.scss
doxygen_in/: .gitignore  Doxyfile.in  cmake.md  cmake.md.in  doxygen_main.md  install.md  install.md.in  install_linux.md  install_linux.md.in  install_windows.md  install_windows.md.in  layouts.md  multithreading.md  nutshell.md  tut_buttons.md  tut_checkboxes.md  tut_fatal.md  tut_layouts.md  tut_msgbox.md  tut_persist.md  tut_screentext.md  tut_shapes.md  tutorials.md
examples/: example_add_theme.cpp  example_add_widget.cpp  example_checkboxes.cpp  example_linecrossing.cpp  example_matwidget.cpp  example_msgbox.cpp  example_radiobuttons.cpp  example_screen_text.cpp  example_selectbox.cpp  example_shapes.cpp  example_shapes_widgets.cpp  example_themes.cpp  show_all.cpp
src/: canvas.cpp  canvas.h  colors.cpp  colors.h
src/canvascv/: canvas.cpp  canvas.h  colors.cpp  colors.h  consts.cpp  consts.h  utils.h
src/shapes/: arrow.h  compoundshape.cpp  compoundshape.h  ellipse.h  handle.cpp  handle.h  labeledshapesconnector.cpp  labeledshapesconnector.h  line.cpp  line.h  linecrossing.cpp  linecrossing.h  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  shapefactory.cpp  shapefactory.h  shapesconnector.cpp  shapesconnector.h  textbox.cpp  textbox.h
src/themes/: theme.h  themedark.cpp  themedark.h  themedarkblue.cpp  themedarkorange.cpp  themerepository.cpp  themerepository.h  twocoloredtheme.cpp  twocoloredtheme.h
src/widgets/: autolayout.cpp  autolayout.h  button.cpp  button.h  checkboxes.cpp  checkboxes.h  compoundwidget.cpp  compoundwidget.h  floatingtext.cpp  floatingtext.h  hframe.cpp  hframe.h  horizontallayout.cpp  horizontallayout.h  layout.cpp  layout.h  layoutbase.cpp  layoutbase.h  layoutbasewidget.cpp  layoutbasewidget.h  matwidget.cpp  matwidget.h  msgbox.cpp  msgbox.h  radiobuttons.cpp  radiobuttons.h  selectionbox.cpp  selectionbox.h  text.cpp  text.h  verticallayout.cpp  verticallayout.h  (+6 more)
tutorials/: nutshell.cpp  tut_buttons.cpp  tut_buttons_txt_alignment.cpp  tut_checkboxes_cb.cpp  tut_checkboxes_poll.cpp  tut_fatal.cpp  tut_layout_buttons.cpp  tut_layout_dialog.cpp  tut_layout_text.cpp  tut_linecrossing.cpp  tut_msgbox.cpp  tut_msgbox_modal.cpp  tut_msgbox_modal_external.cpp  tut_screentext.cpp  tut_shapes_code.cpp  tut_shapes_gui.cpp  tut_shapes_persistency.cpp  tut_text.cpp
(+155 files in other folders)
